--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sample webpack app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --entry ./src/js/app.js --output-filename ./dist/bundle.js",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
